--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -13,6 +13,8 @@
       id="pensamento"
       name="pensamento"
       placeholder="Digite o pensamento"
+      [value]="pensamento.conteudo"
+
     />
 
     <label for="autoria">Autoria ou fonte</label>
@@ -22,6 +24,7 @@
       id="autoria"
       name="autoria"
       placeholder="Digite a autoria ou fonte"
+      [value]="pensamento.autoria"
     />
 
     <label for="modelo">Selecione o modelo do card:</label>
@@ -36,8 +39,8 @@
         </label>
         <div class="modelo modelo1 ff-roboto-mono">
             <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis">
-            <p class="conteudo">Aqui vai o conteúdo</p>
-            <p class="autoria"><b>Aqui vai a autoria</b></p>
+            <p class="conteudo">{{ pensamento.conteudo }}</p>
+            <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
         </div>
       </div>
       <div class="radio-modelo">
@@ -50,8 +53,8 @@
         </label>
         <div class="modelo modelo2 ff-roboto-mono">
             <img src="../../../../assets/imagens/modelo2.png" alt="Aspas azul claro">
-            <p class="conteudo">Aqui vai o conteúdo</p>
-            <p class="autoria"><b>Aqui vai a autoria</b></p>
+            <p [textContent]="pensamento.conteudo" class="conteudo"></p>
+            <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
         </div>
       </div>
       <div class="radio-modelo">
@@ -64,8 +67,8 @@
         </label>
         <div class="modelo modelo3 ff-roboto-mono">
             <img src="../../../../assets/imagens/modelo3.png" alt="Aspas verde ">
-            <p class="conteudo">Aqui vai o conteúdo</p>
-            <p class="autoria"><b>Aqui vai a autoria</b></p>
+            <p class="conteudo">{{ pensamento.conteudo }}</p>
+            <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
         </div>
       </div>
       <div class="acoes">
