--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -13,8 +13,7 @@
       id="pensamento"
       name="pensamento"
       placeholder="Digite o pensamento"
-      [value]="pensamento.conteudo"
-
+      [(ngModel)]="pensamento.conteudo"
     />
 
     <label for="autoria">Autoria ou fonte</label>
@@ -24,57 +23,87 @@
       id="autoria"
       name="autoria"
       placeholder="Digite a autoria ou fonte"
-      [value]="pensamento.autoria"
+      [(ngModel)]="pensamento.autoria"
     />
 
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
       <div class="radio-modelo">
         <label for="modelo1">
-          <input type="radio" id="modelo1" value="modelo1" name="modelo-card" />
+          <input
+            type="radio"
+            id="modelo1"
+            value="modelo1"
+            name="modelo-card"
+            [(ngModel)]="pensamento.modelo"
+          />
           <div class="custom-radio">
             <span></span>
           </div>
           <span>Modelo 1</span>
         </label>
         <div class="modelo modelo1 ff-roboto-mono">
-            <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis">
-            <p class="conteudo">{{ pensamento.conteudo }}</p>
-            <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+          <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis" />
+          <p class="conteudo">{{ pensamento.conteudo }}</p>
+          <p class="autoria">
+            <b>{{ pensamento.autoria }}</b>
+          </p>
         </div>
       </div>
       <div class="radio-modelo">
         <label for="modelo2">
-          <input type="radio" id="modelo2" value="modelo2" name="modelo-card" />
+          <input
+            type="radio"
+            id="modelo2"
+            value="modelo2"
+            name="modelo-card"
+            [(ngModel)]="pensamento.modelo"
+          />
           <div class="custom-radio">
             <span></span>
           </div>
           <span>Modelo 2</span>
         </label>
         <div class="modelo modelo2 ff-roboto-mono">
-            <img src="../../../../assets/imagens/modelo2.png" alt="Aspas azul claro">
-            <p [textContent]="pensamento.conteudo" class="conteudo"></p>
-            <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+          <img
+            src="../../../../assets/imagens/modelo2.png"
+            alt="Aspas azul claro"
+          />
+          <p [textContent]="pensamento.conteudo" class="conteudo"></p>
+          <p class="autoria">
+            <b>{{ pensamento.autoria }}</b>
+          </p>
         </div>
       </div>
       <div class="radio-modelo">
         <label for="modelo3">
-          <input type="radio" id="modelo3" value="modelo3" name="modelo-card" />
+          <input
+            type="radio"
+            id="modelo3"
+            value="modelo3"
+            name="modelo-card"
+            [(ngModel)]="pensamento.modelo"
+          />
           <div class="custom-radio">
             <span></span>
           </div>
           <span>Modelo 3</span>
         </label>
         <div class="modelo modelo3 ff-roboto-mono">
-            <img src="../../../../assets/imagens/modelo3.png" alt="Aspas verde ">
-            <p class="conteudo">{{ pensamento.conteudo }}</p>
-            <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+          <img
+            src="../../../../assets/imagens/modelo3.png"
+            alt="Aspas verde "
+          />
+          <p class="conteudo">{{ pensamento.conteudo }}</p>
+          <p class="autoria">
+            <b>{{ pensamento.autoria }}</b>
+          </p>
         </div>
       </div>
       <div class="acoes">
         <div class="acoes">
-            <button class="botao">Salvar</button>
-            <button class="botao">Cancelar</button>
+          <button (click)="criarPensamento()" class="botao">Salvar</button>
+          <button (click)="cancelar()" class="botao">Cancelar</button>
         </div>
       </div>
     </div>
